Fixed text overflow till max-width 480px

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ h1{
 
 .colorchange{
     animation: colorchange 1s infinite;
+    font-size: 200%;
 }
 
 @keyframes colorchange{
@@ -184,6 +185,10 @@ footer{
     }
 }
 
+@media only screen and (max-width: 640px){
+    h1{font-size: 100%;}
+}
+
 @media only screen and (max-width: 480px){
-    h1{font-size: 160%;}   
+    h1{font-size: 10vw;}
 }
